fix theme toggler spacing

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -87,9 +87,9 @@
       border: 1px solid $light-gray;
       border-radius: 0;
 
-      /*&:hover {
+      &:hover {
        color: $link-color-hover;
-      }*/
+      }
 
       /*&.current {
        color: #fff;
@@ -184,9 +184,9 @@
 //    color: $masthead-link-color;
     text-decoration: none;
 
-    /*&:hover {
+    &:hover {
      color: $masthead-link-color-hover;
-    }*/
+    }
   }
 
   button {
@@ -265,10 +265,10 @@
       padding: 10px 20px;
       font-size: $type-size-5;
 
-      /*&:hover {
+      &:hover {
        color: $masthead-link-color-hover;
-       background: mix(#fff, $primary-color, 75%);
-      }*/
+      //  background: mix(#fff, $primary-color, 75%);
+      }
     }
 
     &:before {
